# tizpar

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/tizpar/: __init__.py  core.py
src/tizpar/cli/: __init__.py  main.py
src/tizpar/cli/commands/: __init__.py  convert.py  info.py  network.py  persian.py  system.py
src/tizpar/utils/: __init__.py  converters.py  network.py  persian.py  system.py
tests/: __init__.py  test_converters.py  test_network.py  test_persian.py  test_system.py
