[metadata]
name = tizpar
version = 0.0.1
description = تیزپر - Swift Persian Developer Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZendanTeam/tizpar
author = ZendanTeam
author_email = zendanteam@arena.ai
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Natural Language :: Persian
    Natural Language :: English

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    click>=8.1.0
    rich>=13.0.0
    requests>=2.31.0
    python-dateutil>=2.8.0

[options.packages.find]
where = src
include = tizpar, tizpar.*

[options.entry_points]
console_scripts = 
    tizpar = tizpar.cli.main:cli
